<?xml version="1.0"?>
<package format="2">
  <name>rtcf</name>
  <version>0.0.0</version>
  <description>Real-time Control Framework (RTCF)</description>

  <maintainer email="github@stefan-geyer.org">stefan geyer</maintainer>
  <maintainer email="michael.fennel@kit.edu">michael.fennel@kit.edu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtcf_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rtt_rtcf_msgs</exec_depend>
  <exec_depend>rtt_ros</exec_depend>
  <exec_depend>rtt_roscomm</exec_depend>
  <exec_depend>rtt_rosclock</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <rtt_ros>
      <!-- These are required for the testcases -->
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
    </rtt_ros>

  </export>
</package>
