<package>
  <name>foobar</name>
  <version>1.0.0</version>
  <description>This package contains the components of the foobar package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Unknown Author</author>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <run_depend>rtt</run_depend>

  <export>

  </export>
</package>